<resources>
    <string name="app_name">Smoothie</string>
    //for landing page
    <string name="landing">Squeeze Out That CREATIVE Juice !</string>
    <string name="squeeze">Squeeze</string>
    //for login page
    <string name="login">Login</string>
    <string name="loginEmail">Enter your email</string>
    <string name="loginPassword">Enter your password</string>
    <string name="iDontHaveAnAccount">I don\'t have an account</string>
    //for user register page
    <string name="createUser">"Create User "</string>
    <string name="userName">Enter your name</string>
    <string name="userContact">Enter your phone number</string>
    <string name="userEmail">Enter your Email</string>
    <string name="userPassword">Password</string>
    <string name="create">Create</string>
    <string name="txtAppName">Smoothie</string>
    <string name="appName">Smoothie</string>
    <string name="createAcc">Create New Account</string>
    <string name="hintShopName">Shop Name</string>
    <string name="hintOwnerName">Owner Name</string>
    <string name="hintShopConNo">Shop Contact Number</string>
    <string name="hintLocation">Location</string>
    <string name="hintEmail">Email</string>
    <string name="btnRegisterShop">Register</string>
    <string name="txtLoginShopLable">Login as a Shop</string>
    <string name="txtLoginLable">"Login "</string>
    <string name="logEmail">Enter your Email</string>
    <string name="logPassword">Password</string>
    <string name="btnLoginShop">Login</string>
    <string name="txtNoAccShop">My shop doesn\'t have an account</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="editprof">editProf</string>
    <string name="save">save</string>
    <string name="Name">edit_name</string>
    <string name="name">Name</string>
    <string name="joey_trib">Joey Trib</string>
    <string name="joey_gmail_com">joey@gmail.com</string>
    <string name="ed_phone">+1-202-555-0157</string>
    <string name="add_juice">Add Juice</string>
    <string name="juice_name">Juice Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="order">Order</string>
    <string name="amount">Amount</string>
    <string name="delete">delete</string>
    <string name="productName">product Name</string>
    <string name="productPrice">product price</string>
    <string name="productDescription">product Description</string>
    <string name="update">update</string>
    <string name="edit">edit</string>
    <string name="hintShopPassword">shop password</string>
    <string name="btnShopLoginLabel">shopLogin</string>
    <string name="home">home</string>
    <string name="collect_your_order">Collect your order</string>
    <string name="add_image">Add Image</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">Cancel</string>
    <string name="shopName">Roots</string>
    <string name="shopLocation">Malabe</string>
    <string name="txtShopProOwnerName">Name</string>
    <string name="txtShopLoginLabel">Shop name</string>
    <string name="lblShopUpdateName">"Shop name : "</string>
    <string name="lblShopUpdateOwName">Owner name :</string>
    <string name="lblShopUpdatePhone">Contact number :</string>
    <string name="lblShopUpdateEmail">Email :</string>
    <string name="lblShopUpdateLocation">Location :</string>
    <string name="btnShopUpdateSave">Save</string>
</resources>